# Crust

./: Cargo.toml  INSTALL  README.md  crust.desktop  install.sh
.config/: crust.ui
crust/: Cargo.toml
crust/src/: crust.css  main.rs  test.txt
desktop/: crust.desktop
src/: main.rs  style.css  test.txt
